introduction line spacing is fixed

--- a/css/page1.css
+++ b/css/page1.css
@@ -217,6 +217,7 @@ html {
         width: 80%;
         padding: 2vw;
         text-align: center;
+        line-height: 5vw;
       }
       .introduction-heading{
         font-size:6vw;
